Avance en controllers, Servlets hechos y cambio en entidad Usuario

--- a/MoxxDesignsWebApp/pom.xml
+++ b/MoxxDesignsWebApp/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>MoxxDesignsGestionarCotizaciones</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>MoxxDesignsAutenticacion</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     
     <build>
