--- a/MoxxDesignsWebApp/pom.xml
+++ b/MoxxDesignsWebApp/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>MoxxDesignsAutenticacion</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
     
     <build>
