--- a/MoxxDesignsWebApp/src/main/webapp/WEB-INF/web.xml
+++ b/MoxxDesignsWebApp/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,57 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
-   version="6.0">
-    <session-config>
-        <session-timeout>
-            30
-        </session-timeout>
-    </session-config>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+         http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
+         version="3.0">
+
+    <!-- AuthServlet -->
+    <servlet>
+        <servlet-name>AuthServlet</servlet-name>
+        <servlet-class>itson.mx.moxxdesignswebapp.servlets.AuthServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AuthServlet</servlet-name>
+        <url-pattern>/auth/*</url-pattern>
+    </servlet-mapping>
+
+    <!-- CarritoCompraServlet -->
+    <servlet>
+        <servlet-name>CarritoCompraServlet</servlet-name>
+        <servlet-class>itson.mx.moxxdesignswebapp.servlets.CarritoCompraServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CarritoCompraServlet</servlet-name>
+        <url-pattern>/carrito/*</url-pattern>
+    </servlet-mapping>
+
+    <!-- PedidosServlet -->
+    <servlet>
+        <servlet-name>PedidosServlet</servlet-name>
+        <servlet-class>itson.mx.moxxdesignswebapp.servlets.PedidosServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>PedidosServlet</servlet-name>
+        <url-pattern>/pedido/*</url-pattern>
+    </servlet-mapping>
+
+    <!-- ProductosServlet -->
+    <servlet>
+        <servlet-name>ProductosServlet</servlet-name>
+        <servlet-class>itson.mx.moxxdesignswebapp.servlets.ProductosServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ProductosServlet</servlet-name>
+        <url-pattern>/productos/*</url-pattern>
+    </servlet-mapping>
+
+    <!-- UsuariosServlet -->
+    <servlet>
+        <servlet-name>UsuariosServlet</servlet-name>
+        <servlet-class>itson.mx.moxxdesignswebapp.servlets.UsuariosServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UsuariosServlet</servlet-name>
+        <url-pattern>/usuario/*</url-pattern>
+    </servlet-mapping>
+
 </web-app>
