Rename del proyecto autenticacion y avance en CarritoComprasController

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /MoxxDesignsGestionarCotizaciones/target/
 /MoxxDesignsAutenticacion/target/
 /MoxxDesignsWebApp/target/
+/MoxxDesignsWebUtils/target/
